--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "1.0.0",
   "description": "Enhanced n8n EmailSend node with email threading support",
   "main": "dist/index.js",
-  "type": "module",
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
     "lint": "eslint src --ext .ts"
   },
   "dependencies": {
-    "n8n-workflow": "^1.0.0",
+    "n8n-workflow": "^1.40.0",
     "nodemailer": "^6.9.0"
   },
   "devDependencies": {
@@ -20,6 +19,15 @@
     "eslint": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0"
+  },
+  "n8n": {
+    "n8nNodesApiVersion": 1,
+    "credentials": [
+      "dist/credentials/Smtp.credentials.js"
+    ],
+    "nodes": [
+      "dist/nodes/EmailSend/EmailSend.node.js"
+    ]
   },
   "keywords": [
     "n8n",
