Prepare package for n8n community node publishing

--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
   },
   "keywords": [
     "n8n",
+    "n8n-community-node-package",
     "node",
     "email",
     "smtp",
-    "threading"
+    "threading",
+    "reply",
+    "conversation",
+    "nodemailer"
   ]
 }
